fix(core): `PrimitiveTextfield` long custom content overflow (#1513)

--- a/projects/core/components/primitive-textfield/primitive-textfield.style.less
+++ b/projects/core/components/primitive-textfield/primitive-textfield.style.less
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 2rem;
+    min-width: 2rem;
     height: 2rem;
     margin-right: @space;
     pointer-events: none;
